// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> Inverted prop error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ac001a;
  border: none;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop neutral 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #424242;
  border: none;
  color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #1250C4;
  border: none;
  color: #E5EDFC;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #004D40;
  border: none;
  color: #dcedc8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Inverted prop warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #d14900;
  border: none;
  color: #ffefd6;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes large 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
  font-size: 18px;
}

<div
  className="c0"
  size="large"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes medium 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Sizes small 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
  font-size: 12px;
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  className="c0"
  size="small"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffa8a8;
  border: none;
  color: #ac001a;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #E5EDFC;
  border: none;
  color: #1250C4;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #dcedc8;
  border: none;
  color: #004D40;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Skins warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  border: none;
  color: #d14900;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop error 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #ac001a;
  color: #ac001a;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop neutral 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #424242;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop primary 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #1250C4;
  color: #1250C4;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop success 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #004D40;
  color: #004D40;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> Stroked prop warning 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #d14900;
  color: #d14900;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #E5EDFC;
  border: none;
  color: #1250C4;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #1250C4;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 3`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #dcedc8;
  border: none;
  color: #004D40;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #004D40;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 4`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffefd6;
  border: none;
  color: #d14900;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #d14900;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 5`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffa8a8;
  border: none;
  color: #ac001a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #ac001a;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 6`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #424242;
  border: none;
  color: #f2f2f2;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 7`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #1250C4;
  border: none;
  color: #E5EDFC;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 8`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #004D40;
  border: none;
  color: #dcedc8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 9`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #d14900;
  border: none;
  color: #ffefd6;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 10`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ac001a;
  border: none;
  color: #ffa8a8;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c8 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c9 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c10 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c11 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 11`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #424242;
  color: #424242;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #424242;
}

.c4 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c5 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c6 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c7 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c8 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c9 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c10 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c11 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 12`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #1250C4;
  color: #1250C4;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c5 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c6 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c7 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c8 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c9 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c10 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c11 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 13`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #004D40;
  color: #004D40;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c6 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c7 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c8 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c9 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c10 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c11 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 14`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #d14900;
  color: #d14900;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c7 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c8 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c9 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c10 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c11 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> onClose Prop is rendering well 15`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #ffffff;
  border: 1px solid #ac001a;
  color: #ac001a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 .c3 {
  font-size: 18px;
  color: #424242;
}

.c5 .c3 {
  font-size: 18px;
  color: #1250C4;
}

.c6 .c3 {
  font-size: 18px;
  color: #004D40;
}

.c7 .c3 {
  font-size: 18px;
  color: #d14900;
}

.c2 {
  background: none;
  border: none;
  cursor: pointer;
  height: 18px;
  padding: 0;
  margin-left: 4px;
}

.c2 .c3 {
  font-size: 18px;
  color: #ac001a;
}

.c8 .c3 {
  font-size: 18px;
  color: #f2f2f2;
}

.c9 .c3 {
  font-size: 18px;
  color: #E5EDFC;
}

.c10 .c3 {
  font-size: 18px;
  color: #dcedc8;
}

.c11 .c3 {
  font-size: 18px;
  color: #ffefd6;
}

.c12 .c3 {
  font-size: 18px;
  color: #ffa8a8;
}

<div
  className="c0"
  size="medium"
>
  <div
    className="c1"
    onClose={[Function]}
  >
    Tag text
    <button
      className="c2"
      onClick={[Function]}
      size="medium"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3 "
        style={
          Object {
            "color": "",
          }
        }
      >
        close
      </span>
    </button>
  </div>
</div>
`;

exports[`<Tag /> with bold prop 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  font-weight: bold;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> with only text prop / children 2`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    example
  </div>
</div>
`;

exports[`<Tag /> without props 1`] = `
.c0 {
  border-radius: 8px;
  box-sizing: border-box;
  display: inline-block;
  margin-right: 8px;
  padding: 4px 12px;
  background-color: #f2f2f2;
  border: none;
  color: #424242;
}

<div
  className="c0"
  size="medium"
>
  <div
    className=""
  >
    Tag text
  </div>
</div>
`;
